<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/otp_background"
    android:paddingStart="24dp"
    android:paddingEnd="24dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:paddingStart="0dp"
            android:paddingEnd="16dp"
            android:scaleType="centerInside"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_otp_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/token_detail"
            android:textColor="@color/title_color"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:text="@string/save"
            android:textColor="#215AE5"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_otp_detail"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textColor="#86909C"
                android:textSize="14sp"/>
            <EditText
                android:id="@+id/text_account"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:singleLine="true"
                android:maxLines="1"
                android:lines="1"
                android:textSize="14sp"
                android:textColor="@color/title_color"
                android:gravity="center|end"
                android:background="@null"
                android:hint=" "
                android:textColorHint="#bfbfbf"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/otp_background"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/application"
                android:textColor="#86909C"
                android:textSize="14sp"/>
            <EditText
                android:id="@+id/text_application"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:singleLine="true"
                android:maxLines="1"
                android:lines="1"
                android:textSize="14sp"
                android:textColor="@color/title_color"
                android:gravity="center|end"
                android:background="@null"
                android:hint=" "
                android:textColorHint="#bfbfbf"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/otp_background"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digits"
                android:textColor="#86909C"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/text_digits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="14sp"
                android:textColor="#bfbfbf"
                android:gravity="end"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/otp_background"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interval"
                android:textColor="#86909C"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/text_interval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="14sp"
                android:textColor="#bfbfbf"
                android:gravity="end"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/otp_background"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/algorithm"
                android:textColor="#86909C"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/text_algorithm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="14sp"
                android:textColor="#bfbfbf"
                android:gravity="end"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/otp_background"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/issuer"
                android:textColor="#86909C"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/text_issuer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="14sp"
                android:textColor="#bfbfbf"
                android:gravity="end"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>