<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        android:paddingStart="@dimen/common_padding_24"
        android:paddingEnd="@dimen/common_padding_24">

        <include
            android:id="@+id/otp_export_select_actionbar"
            layout="@layout/layout_actionbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_16"
            android:background="@drawable/background_layout_white"
            android:orientation="vertical"
            android:paddingStart="@dimen/common_padding_16"
            android:paddingEnd="@dimen/common_padding_16">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/otp_export_select_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/all_check"
                    android:textColor="@color/text_color_4E5969"
                    android:textSize="@dimen/common_text_size_14" />

                <TextView
                    android:id="@+id/otp_export_select_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/has_check"
                    android:textColor="@color/text_color_4E5969"
                    android:textSize="@dimen/common_text_size_14" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/otp_export_select_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:minHeight="16dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/otp_export_select_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_height_button_48"
            android:layout_marginStart="74dp"
            android:layout_marginEnd="74dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="@string/export"
            android:textAppearance="@android:style/Widget.TextView"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/common_text_size_16" />

    </LinearLayout>

</layout>